--- a/test.ipynb
+++ b/test.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./data.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/Quera-fr/Python-Programming/refs/heads/main/data.csv\")"
    ]
   },
   {
